# Ranker-System

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_extract_domains.py
.github/workflows/: ci.yml
Result/: top_100_recommended_candidates.csv  top_100_recommended_candidates.xlsx
docs/: 01_ENGINEERING_CHARTER.md  02_PHASE1_MASTER_SPEC.md  03_PHASE1_TDD.md  04_DATA_CONTRACTS.md  05_TESTING_CHARTER.md  06_ACCEPTANCE_CRITERIA.md  07_CODE_QUALITY_RULES.md  08_OBSERVABILITY_SPEC.md  09_PERFORMANCE_SPEC.md  10_IMPLEMENTATION_ORDER.md  11_PHASE1_IMPLEMENTATION_PROMPT.md
scripts/: audit_top20_and_distribution.py  export_csv.py  validate_architecture.py
src/: __init__.py
src/anomalies/: engine.py
src/clusters/: engine.py
src/contracts/: __init__.py  alignment.py  anomalies.py  base.py  candidates.py  centrality.py  clusters.py  confidence.py  entities.py  enums.py  evidence.py  graph.py  ingestion.py  job.py  metadata.py  patterns.py  profiling.py  ranking.py  relationships.py  reports.py  schema.py  scoring.py  semantic.py  types.py
src/entities/: engine.py
src/graph/: centrality.py  engine.py
src/ingestion/: docx_parser.py  engine.py
src/intelligence/: alignment_engine.py  candidate_engine.py  job_engine.py  ranking_engine.py  scoring_engine.py
src/orchestration/: pipeline.py
src/patterns/: engine.py
src/profiling/: engine.py
src/relationships/: engine.py
src/reports/: engine.py
src/schema/: engine.py
src/semantic/: domain_taxonomy.py  engine.py
tests/unit/: test_batch1.py  (+6 more)
